scripts/nullaway/wpi/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8.txt
../wpi/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Action.java:56: error: [NullAway] dereferenced expression p is @Nullable
            List<WavePath> d = Action.construct(p.get(p.size() - 1), loop, move1, move2);
                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Action.java:56: error: [NullAway] dereferenced expression p is @Nullable
            List<WavePath> d = Action.construct(p.get(p.size() - 1), loop, move1, move2);
                                                       ^
    (see http://t.uber.com/nullaway )
../wpi/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Loop.java:13: error: [NullAway] dereferenced expression prev is @Nullable
        w.setStartX(prev.getEndX() - 1);
                        ^
    (see http://t.uber.com/nullaway )
../wpi/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Delay.java:20: error: [NullAway] dereferenced expression prev is @Nullable
        w.setStartX(prev.getEndX() - 1);
                        ^
    (see http://t.uber.com/nullaway )
../wpi/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Move.java:22: error: [NullAway] dereferenced expression prev is @Nullable
        w.setStartX(prev.getEndX());
                        ^
    (see http://t.uber.com/nullaway )
../wpi/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/MoveQ.java:25: error: [NullAway] dereferenced expression prev is @Nullable
        w.setStartX(prev.getEndX());
                        ^
    (see http://t.uber.com/nullaway )
6 errors
